Wed May 24 12:40:57 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/EndpointPolicy/IIOPEndpointValue_i.h:
          Fixed memory leak. Unlike servants, local objects are not
          intrinsically reference counted. Therefore it is still necessary
          to explicitly inherit from TAO_RefCount_LocalObject rather than
          from CORBA::LocalObject.

Wed May 24 10:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/String_Manager_T.h (out, _retn):
          Just set ptr_ to 0 instead of initializing it with an default
          string. Now we get the same behaviour as with the old string
          manager, fixes runtime memory leaks when the string managers
          are used

Wed May 24 09:12:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/DIOP_Connector.cpp:
          Const improvements

Wed May 24 09:09:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/performance.html:
          Added ACE_NLOGGING=1 as one of the options that can be used to
          reduce footprint. Adding this to the footprint build resulted in
          a footprint drop of about 10% for the Hello client.

Wed May 24 08:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Bounded_Sequence_CDR_T.h:
        * tao/Unbounded_Sequence_CDR_T.h:
          Fixed memory leak in the demarshaling of (w)string sequences.

Wed May 24 03:01:14 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/PortableServer/POAManager.cpp:
        * tao/PortableServer/POAManagerFactory.cpp:

          Cleaned up redundant debug messages.

        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Client_Task.cpp:
        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/Server_Task.cpp:
        * tests/Portable_Interceptors/Collocated/Service_Context_Manipulation/interceptors.cpp: