@@ -1,3 +1,9 @@
+Wed May 24 16:00:03 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * tao/TAO_Internal.cpp:
+          Refactored recent change to skip over global parameters after
+          the first initialization pass.
+
 Wed May 24 12:40:57 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * tao/EndpointPolicy/IIOPEndpointValue_i.h:
